# tasklab

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
bench/: bench_main.c
docs/: architecture.md  benchmarks.md  c-style-guide.md  design.md  lab.md  local-dev.md  roadmap.md
include/thread_pool/: node.h  queue.h  task.h
include/tl/: executor.h  queue.h  task.h
scripts/: dev-env.ps1  local-ci.ps1
src/: rand_id_generator.c  rand_id_generator.h  task.c  task_executor.c  task_node.c  task_node.h  task_queue.c  tl_task.c  tl_task.h
tests/: test_executor.c  test_executor.h  test_main.c  test_node.c  test_node.h  test_queue.c  test_queue.h  test_support.h  test_task.c  test_task.h  test_tl_task.c  test_tl_task.h
